--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pluggy==0.13.1
 pockets==0.9.1
 py==1.10.0
 Pygments==2.9.0
-pyinotify==0.9.6
+# pyinotify==0.9.6
 pyparsing==2.4.7
 pytest==6.2.4
 pytz==2021.1
