--- a/requirements.txt
+++ b/requirements.txt
@@ -1,35 +1,34 @@
-alabaster==0.7.12
-attrs==21.2.0
-Babel==2.9.1
-certifi==2020.12.5
-chardet==4.0.0
-cloudpickle==1.6.0
-docutils==0.17.1
-doit==0.33.1
-idna==2.10
-imagesize==1.2.0
-iniconfig==1.1.1
-Jinja2==3.0.1
-MarkupSafe==2.0.1
-packaging==20.9
-pluggy==0.13.1
-pockets==0.9.1
-py==1.10.0
-Pygments==2.9.0
-pyinotify==0.9.6
-pyparsing==2.4.7
-pytest==6.2.4
-pytz==2021.1
-requests==2.25.1
-six==1.16.0
-snowballstemmer==2.1.0
-Sphinx==4.0.2
-sphinxcontrib-applehelp==1.0.2
-sphinxcontrib-devhelp==1.0.2
-sphinxcontrib-htmlhelp==1.0.3
+alabaster==1.0.0
+babel==2.16.0
+certifi==2024.8.30
+charset-normalizer==3.3.2
+cloudpickle==3.0.0
+docutils==0.21.2
+doit==0.36.0
+flake8==7.1.1
+idna==3.10
+imagesize==1.4.1
+importlib_metadata==8.5.0
+iniconfig==2.0.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+mccabe==0.7.0
+packaging==24.1
+pluggy==1.5.0
+pycodestyle==2.12.1
+pyflakes==3.2.0
+Pygments==2.18.0
+pytest==8.3.3
+requests==2.32.3
+setuptools==75.1.0
+snowballstemmer==2.2.0
+Sphinx==8.0.2
+sphinxcontrib-applehelp==2.0.0
+sphinxcontrib-devhelp==2.0.0
+sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
-sphinxcontrib-napoleon==0.7
-sphinxcontrib-qthelp==1.0.3
-sphinxcontrib-serializinghtml==1.1.4
-toml==0.10.2
-urllib3==1.26.5
+sphinxcontrib-qthelp==2.0.0
+sphinxcontrib-serializinghtml==2.0.0
+urllib3==2.2.3
+wheel==0.44.0
+zipp==3.20.2
