--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,10 @@ alabaster==1.0.0
 babel==2.16.0
 build==1.2.2
 certifi==2024.8.30
+cffi==1.17.1
 charset-normalizer==3.3.2
 cloudpickle==3.0.0
+cryptography==43.0.1
 docutils==0.21.2
 doit==0.36.0
 flake8==7.1.1
@@ -11,17 +13,33 @@ idna==3.10
 imagesize==1.4.1
 importlib_metadata==8.5.0
 iniconfig==2.0.0
+jaraco.classes==3.4.0
+jaraco.context==6.0.1
+jaraco.functools==4.1.0
+jeepney==0.8.0
 Jinja2==3.1.4
+keyring==25.4.1
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
 mccabe==0.7.0
+mdurl==0.1.2
+more-itertools==10.5.0
+nh3==0.2.18
 packaging==24.1
+pkginfo==1.10.0
 pluggy==1.5.0
 pycodestyle==2.12.1
+pycparser==2.22
 pyflakes==3.2.0
 Pygments==2.18.0
 pyproject_hooks==1.1.0
 pytest==8.3.3
+readme_renderer==44.0
 requests==2.32.3
+requests-toolbelt==1.0.0
+rfc3986==2.0.0
+rich==13.8.1
+SecretStorage==3.3.3
 snowballstemmer==2.2.0
 Sphinx==8.0.2
 sphinxcontrib-applehelp==2.0.0
@@ -30,6 +48,7 @@ sphinxcontrib-htmlhelp==2.1.0
 sphinxcontrib-jsmath==1.0.1
 sphinxcontrib-qthelp==2.0.0
 sphinxcontrib-serializinghtml==2.0.0
+twine==5.1.1
 urllib3==2.2.3
 wheel==0.44.0
 zipp==3.20.2
