--- a/.github/workflows/test-plat.yaml
+++ b/.github/workflows/test-plat.yaml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/setup-python@v5
         with:
           python-version: 3.12
-      - name: Install pytest
+      - name: Install requirements
         run: "pip install -r requirements.txt"
       - name: Plat tests
         run: "doit plat_test"
