--- a/.github/workflows/test-plat.yaml
+++ b/.github/workflows/test-plat.yaml
@@ -1,8 +1,8 @@
-name: Ruly tests
+name: Ruly platform tests
 on: [push]
 
 jobs:
-  test:
+  build:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -12,5 +12,10 @@ jobs:
           python-version: 3.12
       - name: Install requirements
         run: "pip install -r requirements.txt"
-      - name: Plat tests
-        run: "doit plat_test"
+      - name: Build wheel
+        run: "doit dist"
+      - name: Upload wheel
+        uses: "actions/upload-artifact@master"
+        with:
+          name: wheel
+          path: ./dist
