--- a/.github/workflows/test-plat.yaml
+++ b/.github/workflows/test-plat.yaml
@@ -19,3 +19,24 @@ jobs:
         with:
           name: wheel
           path: ./dist
+  test:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ["3.6", "3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v5
+        with:
+          python-version: ${{ matrix.python-version }}
+      - name: Download Ruly wheel
+        uses: actions/download-artifact@master
+        with:
+          name: wheel
+          path: ./dist
+      - name: Run tests
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest ./dist/*.whl
+          pytest
