--- a/.github/workflows/test-plat.yaml
+++ b/.github/workflows/test-plat.yaml
@@ -20,6 +20,7 @@ jobs:
           name: wheel
           path: ./dist
   test:
+    needs: ["build"]
     runs-on: ubuntu-latest
     strategy:
       matrix:
