--- a/.github/workflows/test-plat.yaml
+++ b/.github/workflows/test-plat.yaml
@@ -23,36 +23,14 @@ jobs:
     needs: ["build"]
     strategy:
       matrix:
-        versions:
-          - os: "ubuntu-latest"
-            python: "3.6"
-            arch: x86
-          - os: "ubuntu-latest"
-            python: "3.7"
-            arch: amd64
-          - os: "ubuntu-latest"
-            python: "3.8"
-            arch: amd64
-          - os: "ubuntu-latest"
-            python: "3.9"
-            arch: amd64
-          - os: "ubuntu-latest"
-            python: "3.10"
-            arch: amd64
-          - os: "ubuntu-latest"
-            python: "3.11"
-            arch: amd64
-          - os: "ubuntu-latest"
-            python: "3.12"
-            arch: amd64
-    runs-on: ${{ matrix.versions.os }}
+        python: ["3.7", "3.8", "3.9", "3.10", "3.11", "3.12"]
+    runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.versions.python }}
+      - name: Set up Python ${{ matrix.python }}
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.versions.python }}
-          architecture: ${{ matrix.versions.arch }}
+          python-version: ${{ matrix.python }}
       - name: Download Ruly wheel
         uses: actions/download-artifact@master
         with:
